# rasa-chatbot

./: README.md  docker-compose.yml  setup_local.sh
frontend/: index.html  nginx.conf
rasa/: Dockerfile  config.yml  domain.yml  endpoints.yml  rasa_pipeline.sh  requirements-test.txt  requirements.txt  setup_rasa.sh
rasa-app1/: .dockerignore  .gitignore  .python-version  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yml  domain.yml  endpoints.yml  pyproject.toml  run_pipeline.sh  setup_local.sh
rasa-app1/data/: nlu.yml  rules.yml  stories.yml
rasa-app1/model-info/: 20250801-123413-inflammable-badger.tar.gz.info.json  test_model.tar.gz.info.json
rasa-app1/scripts/: export_onnx.py  hash_nlu.py  model_info.py
rasa-app1/tests/: test_nlu.yml  test_scripts.py
rasa/actions/: __init__.py  actions.py
rasa/data/: nlu.yml  rules.yml  stories.yml
rasa/tests/: test_actions.py  test_nlu.yml  test_stories.yml
