[tool.poetry]
name = "rasa-app1"
version = "1.0.0"
description = "Enterprise FAQ NLU with Rasa 3.6.21+"
authors = ["Vadivel Murugesan <reachouttovel@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
rasa = {extras = ["transformers"], version = "^3.6.21"}
packaging = ">=20.0,<21.0"
sqlalchemy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.1"
black = "^22.3.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^2.21.0"
#pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
